crates/toml/tests/snapshots/invalid/datetime/time-no-leads.stderr
TOML parse error at line 2, column 5
  |
2 | d = 2023-10-01T1:32:00Z
  |     ^^^^^^^^^^^^^^^^^^^
invalid time, expected a two-digit hour (HH)
